--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link href="style.css" rel="stylesheet">
+
 <center>
 <div class="crassh">
 Если вы это видите, ваш браузер не поддерживает современный CSS или разработчики исправили ошибку CraSSh
